--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.6.0"
+  },
+  "scripts": {
+    "build": "./node_modules/.bin/babel src --out-dir dist",
+    "build:watch": "./node_modules/.bin/babel src --out-dir dist --watch"
   }
 }
