--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0"
   },
   "scripts": {
-    "build": "./node_modules/.bin/babel src --out-dir dist",
-    "build:watch": "./node_modules/.bin/babel src --out-dir dist --watch"
+    "build": "npm run copy && ./node_modules/.bin/babel src --out-dir dist",
+    "build:watch": "npm run copy && ./node_modules/.bin/babel src --out-dir dist --watch",
+    "copy": "robocopy \"src\" \"dist\" \"*.html\" \"/s\""
   }
 }
