Added || true to avoid npm error

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "scripts": {
     "build": "npm run copy && webpack",
     "build:watch": "npm run copy && webpack --watch",
-    "copy": "robocopy \"src\" \"dist\" \"*.html\" \"/s\""
+    "copy": "robocopy \"src\" \"dist\" \"*.html\" \"/s\" || true"
   }
 }
